# hoverboard

./: .env  .gitignore  Arcadefile  Cargo.toml  Dockerfile  README.md  package.json
.buildkite/: pipeline.yml
.buildkite/hooks/: post-checkout
.cargo/: config.toml
resources/: arena.lvl  hoverboard.lvl
resources/collisions/track_collider/: C_Track02.gltf
resources/collisions/track_collision/: C_TrackTest.gltf
resources/effects/: smoke.ptl
resources/models/Track02/: M_Track02.gltf
resources/models/TrackGrouped/: SM_TrackGrouped.gltf
resources/models/cube/: cube.gltf
resources/models/hoverboard/: hoverboard.gltf
resources/models/skysurfer/: skysurfer.gltf
resources/models/soldier/: Soldier_76_GLTF_montagem_02.gltf
resources/models/sphere/: sphere.gltf
resources/models/track/: M_TrackTest.gltf
resources/terrains/sanddunes/: _buildlog.txt
resources/textures/: smoke-small.png.ktx
scripts/: builder
src/: main.rs
src/client/: camera.rs  client.rs  mod.rs  world.rs
src/server/: mod.rs  network_controller.rs  server.rs
src/shared/: input.rs  mod.rs  player_controller.rs
src/shared/components/: mod.rs
src/shared/systems/: mod.rs  player_movement.rs  sky.rs  smoke_bomb.rs
src/shared/weapon/: cleric.rs  great_ax.rs  hammer.rs  mod.rs  tank.rs
